Undid init scrolling for Algolia articles

--- a/app/assets/javascripts/initializePage.js.erb
+++ b/app/assets/javascripts/initializePage.js.erb
@@ -59,7 +59,7 @@ function callInitalizers(){
   setTimeout(function(){
     done = false;
   },300);
-  <%# if(!initScrolling.called) {
+  if(!initScrolling.called) {
     initScrolling();
-  } %>
+  }
 }
