--- a/app/assets/javascripts/initializers/initScrolling.js.erb
+++ b/app/assets/javascripts/initializers/initScrolling.js.erb
@@ -146,6 +146,7 @@ function fetchNextVideoPage(el) {
 }
 
 function insertArticles(articles) {
+  debugger
   var list = document.getElementById("substories");
   var newArticlesHTML = "";
   var el = document.getElementById("home-articles-object")
