--- a/app/javascript/packs/homePageFeed.jsx.erb
+++ b/app/javascript/packs/homePageFeed.jsx.erb
@@ -50,6 +50,8 @@ export const renderFeed = () => {
                 commentsIcon={FEED_ICONS.COMMENTS_ICON}
               />
             ))}
+            hello Algolia
+            <div id="substories" class="substories"></div>
           </div>
         );
       }}
