--- a/app/assets/javascripts/initializers/initScrolling.js.erb
+++ b/app/assets/javascripts/initializers/initScrolling.js.erb
@@ -146,7 +146,6 @@ function fetchNextVideoPage(el) {
 }
 
 function insertArticles(articles) {
-  debugger
   var list = document.getElementById("substories");
   var newArticlesHTML = "";
   var el = document.getElementById("home-articles-object")
@@ -249,6 +248,11 @@ function fetchNextPageIfNearBottom() {
       fetchNextFollowingPage(indexContainer);
     }
   } else {
+    if (document.getElementById("new-feed")) {
+      // Scrolling is handled in the new Feed on the homepage.
+      return;
+    }
+
     scrollableElemId = "articles-list";
     fetchCallback = function fetch() {
       algoliaPaginate(indexContainer.dataset.algoliaTag, indexContainer.dataset.requiresApproval);
